# fastapi-llama2-chat-pdf

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: test_python.yaml
src/: main.py  schemas.py  services.py
src/tests/: test_services.py
