[tool.poetry]
name = "fastapi-llama2-reactjs-chat-pdf"
version = "0.1.0"
description = ""
authors = ["Piotr Gryko <piotr.gryko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.*" # Locked due to chromadb
pydantic = "1.*" # Locked due to chromadb
replicate = "^0.10.0"
uvicorn = "^0.23.2"
faiss-cpu = "^1.7.4"
sse-starlette = "^1.6.1"
chromadb = "^0.4.5"
python-multipart = "^0.0.6"
langchain = "^0.0.252"
pypdf = "^3.14.0"
tiktoken = "^0.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipython = "^8.14.0"
ipdb = "^0.13.13"
ruff = "^0.0.282"
black = "^23.7.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
